test/error/E42.chigmod
{
	"dependencies": ["lang"],
	"types": {},
	"graphs": 23
}
